--- a/webBanTiVi/src/main/resources/templates/login/login.html
+++ b/webBanTiVi/src/main/resources/templates/login/login.html
@@ -45,7 +45,7 @@
                 <a href="#" class="header-nav-item-link">HỎI ĐÁP</a>
             </li>
             <li class="header-nav-item">
-                <a href="/user" class="header-nav-item-link">QUAY LẠI</a>
+                <a href="/" class="header-nav-item-link">QUAY LẠI</a>
             </li>
         </ul>
     </nav>
